[project]
name = "pricer"
version = "0.1.0"
description = "Option & Fixed-Income Analytics: BSM, CRR, bonds, curve bootstrap, swaps, futures & Black-76"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hitesh Saraogi" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
